Show the current working directory by default when starting without args

Instead of showing the directory from which we last loaded a file when
we start an app without any arguments, show the directory from which
the app was started.

BUG:260477